    the win. 
    
= 1.4.1 / ???

  + Handles unconsumed input at end of parse completely differently. Instead
    of generating a toplevel error, it now raises an error in every branch
    of the parse. More information in the resulting exception ensues! Thanks
    again to John Mettraux for inspiration & acceptance specs. 
    
  * This history now finally reads like the Changelog of the linux kernel. 
    Meaning that probably no one ever reads this. 
    
= 1.4.0 / 25May2012

  + Revised documentation. A few new API features have finally made it into
    the documentation. Examples in the documentation are now curated and
    run against the current code so that they really really work. 
    Also, the website generation tools have been replaced with 2012-style
    tools. Much less pain to update now. 

  + Parslet::Source now doesn't hold a StringIO, it directly holds the 
    buffer to be parsed. The api of Source has changed a tiny bit. This change
    has been made for speed optimisation reasons.

  + :reporter argument to parse, allowing to customize error reporting within
    wide boundaries. See issue #64 for a discussion. 
    Included are two error reporters, one (default) with the existing error
    tree functionality, one reporting deepest errors as defined by the above
    ticket.

  + Optimistic parse: Parsing is two phase, with the first phase assuming 
    there will be no errors. This yields ~ 20% speed improvement in the 
    case where the parse succeeds.
    Also, internal error handling is now using tuples. This and other 
    optimizations have yielded ~ 30% overall improvement. 

  ! #error_tree and #cause removed from all of parslet. The 
    Parslet::ParseFailed exception now contains a #cause field that can
    be asked for an #ascii_tree as before. 
    Cleaner internal error handling, not stateful in atoms anymore. Some 
    parsers will see correct error reporting for the first time. (issue #65)
