@@ -83,22 +83,6 @@ module Parslet
     attr_reader :cause 
   end
   
-  # Raised when the parse operation didn't consume all of its input. In this
-  # case, it makes only limited sense to look at the error tree. Maybe the
-  # parser worked just fine, but didn't account for the characters at the tail
-  # of the input?
-  #
-  #   str('foo').parse('foobar')
-  #   # raises Parslet::UnconsumedInput: 
-  #   #   Don't know what to do with "bar" at line 1 char 4.
-  #
-  # Note that you can have parslet ignore this error: 
-  #
-  #   str('foo').parse('foobar', prefix: true)  # => "foo"@0
-  #
-  class UnconsumedInput < ParseFailed
-  end
-  
   module ClassMethods
     # Define an entity for the parser. This generates a method of the same
     # name that can be used as part of other patterns. Those methods can be
